# diyjvm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: diyjvm.h
src/: main.c
